--- a/main.css
+++ b/main.css
@@ -1,6 +1,9 @@
 * { box-sizing: border-box; }
 
-html { scroll-behavior: smooth; }
+body, html { 
+    scroll-behavior: smooth; 
+    height: 100%;
+}
 
 h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
@@ -66,6 +69,15 @@ nav a:hover {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    filter: blur(0.3rem) brightness(0.4);
+}
+
+#text-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0 auto;
+    width: 100%;
 }
 
 .wrapper {
@@ -78,10 +90,18 @@ nav a:hover {
 
 #activity-phrase {
     font-size: 2rem;
-    padding: 1rem;
-    background-color: rgba(0,0,0,0.9);
     box-sizing: content-box;
     overflow-wrap: anywhere;
+    text-shadow: 0 0 0.3rem #000;
+}
+
+#activity-phrase::after { content: '.' }
+
+.effect-fade-in { animation: fadeIn 2s; }
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
 }
 
 @media only screen and (min-width: 700px) {
@@ -91,7 +111,6 @@ nav a:hover {
 
     #activity-phrase {
         font-size: 3.5rem;
-        padding: 1.75rem;
     }
 }
 
@@ -102,6 +121,5 @@ nav a:hover {
 
     #activity-phrase {
         font-size: 5rem;
-        padding: 2.5rem;
     }
 }
